# FRACTALE-JULIA

./: CMakeLists.txt  Makefile  RGB.h  Thread.txt  a.gnu  a.txt  a1.gnu  gnuplot.conf  main  main.cpp
